[gd_scene load_steps=7 format=3 uid="uid://cbfnehe3t1lhq"]

[ext_resource type="Script" path="res://camera/camera_boom.gd" id="1_4g1gc"]

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_gtlw5"]
length = 2.0

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_x1gfa"]

[sub_resource type="Environment" id="Environment_bxs5w"]
adjustment_enabled = true

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_y56gm"]

[sub_resource type="Compositor" id="Compositor_lhfrn"]

[node name="Node3D" type="Node3D"]
script = ExtResource("1_4g1gc")

[node name="CameraBoom" type="SpringArm3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
collision_mask = 8
shape = SubResource("SeparationRayShape3D_gtlw5")
spring_length = 8.0

[node name="HorizontalSpringArm" type="SpringArm3D" parent="CameraBoom"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 8)
collision_mask = 8
shape = SubResource("SeparationRayShape3D_x1gfa")
spring_length = 6.0

[node name="CameraTargetPos" type="Marker3D" parent="CameraBoom/HorizontalSpringArm"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 6)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.785954, 0.618285, 0, -0.618285, 0.785954, 0, 8, 6)
environment = SubResource("Environment_bxs5w")
attributes = SubResource("CameraAttributesPractical_y56gm")
compositor = SubResource("Compositor_lhfrn")
